force-app/main/default/objects/Contact/fields/Count_of_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Feedback__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Feedback</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>