force-app/main/default/objects/Contact/fields/Course_Interested__c.field-meta.xml
<CustomField>
    <fullName>Course_Interested__c</fullName>
    <label>Course Interested In</label>
    <length>50</length>
    <type>Text</type>
</CustomField>