force-app/main/default/objects/Contact/fields/Facebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Id__c</fullName>
    <label>Facebook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>