force-app/main/default/objects/Contact/fields/Firebase_Id__c.field-meta.xml
<CustomField>
    <fullName>Firebase_Id__c</fullName>
    <externalId>true</externalId>
    <label>Firebase Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>