force-app/main/default/objects/Contact/fields/Firebase_idToken__c.field-meta.xml
<CustomField>
    <fullName>Firebase_idToken__c</fullName>
    <label>Token Id From Firebase</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>