force-app/main/default/objects/Contact/fields/Github_Id__c.field-meta.xml
<CustomField>
    <fullName>Github_Id__c</fullName>
    <label>Github Repository Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>