force-app/main/default/objects/Contact/fields/Last_Hash_Code_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Hash_Code_Updated__c</fullName>
    <label>Last Hash Code Updated</label>
    <type>DateTime</type>
</CustomField>