force-app/main/default/objects/Contact/fields/LinkedIn_Id__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Id__c</fullName>
    <label>LinkedIn Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>