force-app/main/default/objects/Contact/fields/Login_Hash_Code__c.field-meta.xml
<CustomField>
    <fullName>Login_Hash_Code__c</fullName>
    <label>Login Hash Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>