force-app/main/default/objects/Contact/fields/Mentor_Rating__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Rating__c</fullName>
    <formula>Total_Feedback_Rating__c  /  Count_of_Feedback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mentor Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>