force-app/main/default/objects/Contact/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Contact ?</label>
    <type>Checkbox</type>
</CustomField>