force-app/main/default/objects/Contact/fields/Public_Profile__c.field-meta.xml
<CustomField>
    <fullName>Public_Profile__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Public Profile</label>
    <type>Checkbox</type>
</CustomField>