force-app/main/default/objects/Contact/fields/Push_To_FB__c.field-meta.xml
<CustomField>
    <fullName>Push_To_FB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push To Firebase</label>
    <type>Checkbox</type>
</CustomField>