force-app/main/default/objects/Contact/fields/Registered_By__c.field-meta.xml
<CustomField>
    <fullName>Registered_By__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered By</label>
    <type>Text</type>
</CustomField>