force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Newly created</fullName>
            </value>
            <value>
                <fullName>Applied for Programme</fullName>
            </value>
            <value>
                <fullName>Mentorship Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>