force-app/main/default/objects/Contact/fields/tdc_cti__Call_Id__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Id__c</fullName>
    <label>Call Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>