force-app/main/default/objects/Contact/fields/Total_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Experience__c</fullName>
    <description>this field will be a roll-up of child employment&apos;s field total experience</description>
    <label>Total Experience in Months</label>
    <summarizedField>Employment_details__c.Experience_in_Months__c</summarizedField>
    <summaryForeignKey>Employment_details__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>