force-app/main/default/objects/Contact/fields/Total_Feedback_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Feedback_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Feedback Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>