force-app/main/default/objects/Contact/fields/Total_Student_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Total_Student_Enrolled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Student Enrolled</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>