force-app/main/default/objects/Contact/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <displayFormat>UID-{0000000}</displayFormat>
    <label>UID</label>
    <type>AutoNumber</type>
</CustomField>