force-app/main/default/objects/Contact/fields/Update_FireBase__c.field-meta.xml
<CustomField>
    <fullName>Update_FireBase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update FireBase</label>
    <type>Checkbox</type>
</CustomField>