force-app/main/default/objects/Contact/recordTypes/Mentor.recordType-meta.xml
<RecordType>
    <fullName>Mentor</fullName>
    <active>true</active>
    <description>This record type will be selected when a Mentor comes on platform for mentoring purpose</description>
    <label>Mentor</label>
</RecordType>