force-app/main/default/objects/Contact/recordTypes/Student.recordType-meta.xml
<RecordType>
    <fullName>Student</fullName>
    <active>true</active>
    <description>This record type will be selected when a Student wants to get mentoring for a particular course</description>
    <label>Student</label>
</RecordType>