force-app/main/default/objects/Contact/recordTypes/TPO.recordType-meta.xml
<RecordType>
    <fullName>TPO</fullName>
    <active>true</active>
    <label>TPO</label>
</RecordType>