force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Current_Company__c</columns>
    <columns>Current_Role__c</columns>
    <columns>Registered_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>