force-app/main/default/objects/Contact/listViews/Mentor.listView-meta.xml
<ListView>
    <fullName>Mentor</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Password__c</columns>
    <columns>Firebase_Id__c</columns>
    <columns>Current_Company__c</columns>
    <columns>Current_Role__c</columns>
    <columns>Interests__c</columns>
    <columns>Public_Profile__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Mentor</value>
    </filters>
    <label>Mentor</label>
</ListView>