force-app/main/default/objects/Contact/listViews/Mentors.listView-meta.xml
<ListView>
    <fullName>Mentors</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>Password__c</columns>
    <columns>Firebase_Id__c</columns>
    <columns>Current_Company__c</columns>
    <columns>Current_Role__c</columns>
    <columns>Interests__c</columns>
    <columns>Public_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registered_By__c</field>
        <operation>equals</operation>
        <value>Mentor</value>
    </filters>
    <label>Mentors</label>
</ListView>