force-app/main/default/objects/Contact/listViews/Student.listView-meta.xml
<ListView>
    <fullName>Student</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Registered_By__c</columns>
    <columns>Branch__c</columns>
    <columns>Course_Interested__c</columns>
    <columns>Qualification__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Student</value>
    </filters>
    <label>Student</label>
</ListView>