force-app/main/default/objects/Contact/listViews/Students.listView-meta.xml
<ListView>
    <fullName>Students</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Registered_By__c</columns>
    <columns>Branch__c</columns>
    <columns>Course_Interested__c</columns>
    <columns>Qualification__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registered_By__c</field>
        <operation>equals</operation>
        <value>Student</value>
    </filters>
    <label>Students</label>
</ListView>